--- a/src/blocks/block-grid-container/styles/editor.scss
+++ b/src/blocks/block-grid-container/styles/editor.scss
@@ -114,7 +114,7 @@
 	position: absolute;
 	left: 50%;
 	transform: translateX(-50%);
-	bottom: -100px;
+	bottom: -80px;
 	z-index: 14;
 
 	.components-button {
